--- a/template/item/xhtml/xhtml_nav.vm
+++ b/template/item/xhtml/xhtml_nav.vm
@@ -49,16 +49,16 @@ nav#landmarks { display:none; }
 		<h2>Guide</h2>
 		<ol>
 #if (${bookInfo.InsertCoverPage})
-			<li><a epub:type="cover" href="cover.xhtml">表紙</a></li>
+			<li><a epub:type="cover" href="xhtml/cover.xhtml">表紙</a></li>
 #end
 #if (${bookInfo.InsertTocPage})
 			<li><a epub:type="toc" href="nav.xhtml">目次</a></li>
 #end
 #if (${title_page})
-			<li><a epub:type="titlepage" href="title.xhtml">扉</a></li>
+			<li><a epub:type="titlepage" href="xhtml/title.xhtml">扉</a></li>
 #end
 #foreach(${sectionInfo} in ${sections})
-			<li><a epub:type="bodymatter" href="${sectionInfo.SectionId}.xhtml">本文</a></li>
+			<li><a epub:type="bodymatter" href="xhtml/${sectionInfo.SectionId}.xhtml">本文</a></li>
 #break
 #end
 		</ol>
@@ -68,7 +68,7 @@ nav#landmarks { display:none; }
 		<h1>目　次</h1>
 		<ol>
 #if (${bookInfo.InsertCoverPage} && ${bookInfo.InsertCoverPageToc})
-			<li class="chapter" id="toccover"><a href="cover.xhtml">${cover_name}</a></li>
+			<li class="chapter" id="toccover"><a href="xhtml/cover.xhtml">${cover_name}</a></li>
 #end
 #set($idx=0)
 #foreach(${chapter} in ${chapters})
@@ -83,9 +83,9 @@ nav#landmarks { display:none; }
 #end
 #end
 #if ($chapter.ChapterId)
-			<li><a href="${chapter.SectionId}.xhtml#${chapter.ChapterId}">${chapter.ChapterName}</a>
+			<li><a href="xhtml/${chapter.SectionId}.xhtml#${chapter.ChapterId}">${chapter.ChapterName}</a>
 #else
-			<li><a href="${chapter.SectionId}.xhtml">${chapter.ChapterName}</a>
+			<li><a href="xhtml/${chapter.SectionId}.xhtml">${chapter.ChapterName}</a>
 #end
 #if (${navNest})
 #foreach(${end} in ${chapter.LevelEnd})
