--- a/template/item/xhtml/xhtml_nav.vm
+++ b/template/item/xhtml/xhtml_nav.vm
@@ -74,7 +74,7 @@ nav#landmarks { display:none; }
 #foreach(${chapter} in ${chapters})
 #if ($chapter.ChapterName)
 #set($idx=$idx+1)
-#if (!${chapter.LevelStart} && $idx > 1)
+#if ((!${chapter.LevelStart} && $idx > 1) || (!${navNest}&& $idx != 1))
 </li>
 #end
 #if (${navNest})
