--- a/template/item/xhtml/xhtml_nav.vm
+++ b/template/item/xhtml/xhtml_nav.vm
@@ -15,11 +15,11 @@ html {
 h1 {font-size:1.5em; padding-top:1em;}
 li {padding:0 .25em 0 0;}
 li a {text-decoration:none; border-right-width:1px; border-right-style:solid; padding-right: 1px;}
-.tcy span {
-	width: 1em;
-	text-combine: horizontal;
-	-webkit-text-combine: horizontal;
-	-epub-text-combine: horizontal;
+.tcy {
+  -webkit-text-combine:         horizontal;
+  -webkit-text-combine-upright: all;
+  text-combine-upright:         all;
+  -epub-text-combine:           horizontal;
 }
 .upr {
 text-orientation: upright;
