--- a/template/item/xhtml/title_middle.vm
+++ b/template/item/xhtml/title_middle.vm
@@ -5,41 +5,21 @@
  xmlns:epub="http://www.idpf.org/2007/ops"
  xml:lang="ja"
  #if (${bookInfo.Vertical})
- class="vrtl"
- #else
  class="hltr"
+ #else
+ class="vrtl"
  #end
 >
 <head>
 <link rel="stylesheet" type="text/css" href="../style/book-style.css"/>
-<link rel="stylesheet" type="text/css" href="../style/middle.css"/>
 
-<style type="text/css">
-.title, .subtitle, .orgtitle, .suborgtitle, .creator, .subcreator, .publisher, .series { line-height: 1.25; }
-.series { font-size:1.25em; }
-.title { font-size:1.75em; }
-.title ruby rt { font-size:.4em; }
-.orgtitle { font-size:1.4em; }
-.orgtitle ruby rt { font-size:.5em; }
-.subtitle { font-size:1.6em; }
-.subtitle ruby rt { font-size:.5em; }
-.suborgtitle { font-size:1.25em; }
-.creator { font-size:1.25em; }
-.subcreator { font-size:1.25em; }
-</style>
 <title>${title}</title>
 </head>
 
 
 
-#if (${kindle})
-<body class="kindle">
-<div class="kindle_outer"><div class="kindle_inner">
-#else
-<body>
-#end
-<table class="middle"><tr><td>
-
+<body class="p-titlepage">
+<div class="main vrtl block-align-center">
 #if (${PUBLISHER})
 	<div class="publisher">${PUBLISHER}</div>
 	<br/>
@@ -52,10 +32,11 @@
 	<br/>
 #end
 
+<div class="book-title start-2em">
 #if (${SERIES})
-	<div class="series">${SERIES}</div>
+	<div class="series book-title-before"">${SERIES}</div>
 #end
-	<div class="title">${TITLE}</div>
+	<div class="title book-title-main">${TITLE}</div>
 #if (${ORGTITLE})
 	<div class="orgtitle pt1">${ORGTITLE}</div>
 #end
@@ -65,17 +46,14 @@
 #if (${SUBORGTITLE})
 	<div class="suborgtitle pt2">${SUBORGTITLE}</div>
 #end
+</div>
 #if (${CREATOR})
-	<div class="creator btm pb2">${CREATOR}</div>
+	<div class="creator btm pb2 author">${CREATOR}</div>
 #end
 #if (${SUBCREATOR})
-	<div class="subcreator btm pb2">${SUBCREATOR}</div>
+	<div class="subcreator btm pb2 author">${SUBCREATOR}</div>
 #end
 
-</td></tr></table>
-#if (${kindle})
-</div></div>
-#end
-
+</div>
 </body>
 </html>
