左右中央の修正

--- a/template/item/xhtml/xhtml_footer.vm
+++ b/template/item/xhtml/xhtml_footer.vm
@@ -1,4 +1,8 @@
-#if (${sectionInfo.Middle} || ${sectionInfo.bottom})
+#if (${sectionInfo.Middle})
+</div>
+</div>
+#end
+#if (${sectionInfo.bottom})
 </td></tr></table>
 #if (${kindle})
 </div></div>
