--- a/template/item/xhtml/xhtml_header.vm
+++ b/template/item/xhtml/xhtml_header.vm
@@ -43,8 +43,7 @@ min-height: ${sectionInfo.ImageHeightPercent}%;
 <div class="start-2em">
 #end
 #if (${sectionInfo.Bottom})
-#if (${kindle})
-<div class="kindle_outer bottom"><div class="kindle_inner">
-#end
-<table class="bottom"><tr><td>
+<body class="p-text">
+<div class="main vrtl block-align-end">
+<div class="start-2em">
 #end
