--- a/template/item/css_custom/horizontal_font_sample.css
+++ b/template/item/css_custom/horizontal_font_sample.css
@@ -2,13 +2,19 @@
 @namespace "http://www.w3.org/1999/xhtml";
 
 /** 横書きフォント変更 埋め込み用
- ファイル名を horizontal_font.css に変更すると有効
+ ファイル名を font.css に変更すると有効
  template/fonts 以下にあるフォントファイルはePubファイルに追加されます */
 
 @font-face {
 font-family: "CustomFont";
 src: url(res:///ebook/fonts/../../mnt/sdcard/fonts/Dfpaburi.ttc);
 }
-body {
+
+/** 横書きフォント */
+.hltr body {
 font-family: "CustomFont", "ＭＳ 明朝", "MS Mincho", "ヒラギノ明朝 ProN W3", "HiraMinProN-W3", serif, sans-serif;
+}
+/** 縦書きフォント */
+.vrtl body {
+font-family: "@ＭＳ 明朝", "@MS Mincho", "ヒラギノ明朝 ProN W3", "HiraMinProN-W3", serif, sans-serif;
 }
